@@ -5,6 +5,7 @@ New features:
   - Subscribe for a demo offering (live or downloadable)
   - Colorful background in subscription list indicates time to expiration (green more than 16 days; red approaching 0 days; purple no expiration)
   - Show subscription details
+  - Show service actions when available
 
 Bug fixes:
   - Wrong offering position returned upon filter
